<resources>
    <string name="app_name">GuessFour</string>
    <!--general-->
    <string name="game_mode">Game Mode</string>
    <string name="game_mode_guessing_textview">Intenta adivinar el numero!</string>
    <string name="game_mode_thinking_textview">Piensa en un numero y yo lo adivinare!</string>
    <string name="game_mode_thinking_textview_try_again">quieres probar de nuevo?</string>
    <string name="exact_match_textview">bien: %s</string>
    <string name="wrong_position_textview">regular: %s</string>

    <!--User Guessing Fragment-->
    <string name="guess_button">Probar</string>
    <string name="lock_number_button">Lock Number</string>
    <string name="restart_button">Restart!</string>
    <string name="action_settings">Ajustes</string>

    <!--Number Guesser Fragment-->
    <string name="start_button">Empezar!</string>
    <string name="end_button">Ese es el numero!</string>
    <string name="number_picker_info_textview">Cuantos digitos tiene tu numero?</string>
    <string name="user_number_info_textview">anota tu numero aqui o en un papel:</string>
    <string name="number_hint">0000</string>
    <string name="correct_number_button">Ese es el numero correcto!</string>
    <string name="feedback_button">casi!</string>
</resources>
